# blind_assistance_helmet

./: README.md  README_cn.md
blind_road_test/blind_road_test/: blind_road_detector.py  vision_controller.py
blind_road_test/launch/: blind_road.launch.py  test1.launch.py
blind_road_test/log/: blind_road_node.py  blind_road_test.py
image_upload_analyzer/: package.xml  setup.py
image_upload_analyzer/image_upload_analyzer/: image_upload_analyzer_node.py  vision_controller.py
image_upload_analyzer/image_upload_analyzer/install/: local_setup.sh  setup.sh
image_upload_analyzer/launch/: vision_ai_chat.launch.py
launch/: all.launch.py
ros2_ws/: fbank_lfr_cmvn_feature.json
ros2_ws/src/: fbank_lfr_cmvn_feature.json
ros2_ws/src/hobot_llamacpp/: CHANGELOG.md  README.md  README_cn.md
ros2_ws/src/hobot_llamacpp/config/: Qwen2.5-0.5B-Instruct-Q4_0.gguf  wget-log  wget-log.1
ros2_ws/src/hobot_llamacpp/launch/: llama_llm.launch.py
ros2_ws/src/hobot_llamacpp/src/: llamacpp_node.cpp
ros2_ws/src/hobot_llamacpp/src/x5/: llama_cpp_parser.cpp
voice_navigation/: package.xml  setup.py
voice_navigation/launch/: navigation_launch.py
voice_navigation/voice_navigation/: config.py  navigator_node.py  voice_controller_node.py
voice_navigation/voice_navigation/gps/: gps_filter.py  gps_reader.py  nmea_parser.py
voice_navigation/voice_navigation/map/: baidu_api.py  navigator.py
voice_navigation/voice_navigation/utils/: geo.py
