<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_upload_analyzer</name>
  <version>0.0.0</version>
  <description>ROS2 node for image analysis using Volcengine ARK Vision API.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license> <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>volcenginesdkarkruntime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>