<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_navigation</name>
  <version>0.0.0</version>
  <description>Voice navigation with ASR+TTS+GPS for RDK X5</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache License 2.0</license>

  <!-- Python 包：运行时依赖用 exec_depend -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- 关键：launch 文件必需 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>